# GuardianAI

./: .dockerignore  .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& cUsersUsuarioDesktopCosas_de_SaulUniversidad4AñoTFG (practicas)GuardianAI.venvScriptsActivate.ps1)  start_guardianai_services.ps1
ai-gateway/: main.py
ai-gateway/application/body_params_schemas/: chat_request.py
ai-gateway/application/ports/: __init__.py  audit_log.py  language_model.py  session_manager.py
ai-gateway/application/usecases/: __init__.py  complete.py  create_session.py  send_to_llm.py
ai-gateway/domain/: exceptions.py  main.py
ai-gateway/domain/entities/: __init__.py  llm_request.py  (+2 more)
document-processor/: config.py  main.py
document-processor/domain/: document.py  extracted_document.py  extraction_progress.py  main.py  parsed_document.py  processing_document.py
document-processor/infrastructure/: config.py
model-provider/: config.py  main.py
model-provider/infrastructure/: dependency_container.py
orchestrator/: __init__.py  main.py
orchestrator/application/: __init__.py  orchestration_service.py
orchestrator/domain/: __init__.py  anonymized_pdf_preview.py  processed_document.py
orchestrator/infrastructure/: __init__.py  dependency_container.py
privacy-engine/domain/: main.py
privacy-shield/: REQUERIMIENTO.json  main.py  run_deanonymization_demo.py
privacy-shield/domain/: deanonymization.py  main.py  streaming_deanonymization.py
privacy-shield/resources/: anonymization_prompt_builder.py  anonymization_settings.py  prompts.py
privacy-shield/storage/: anonymization_debug.jsonl
privacy-shield/tests/: test_stream_safe_response.py
privacy-shield/utils/: anonymization_utils.py  json_utils.py
web-iu/domain/: main.py
web-ui/: config.py  main.py
web-ui/domain/: chat.py  document.py  main.py  message.py
web-ui/infrastructure/: dependency_container.py
(+213 files in other folders)
