[project]
name = "guardianai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.33.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.32.0",
]
