[project]
name = "guardianai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"

dependencies = [
    "accelerate>=1.13.0",
    "httpx>=0.28.0",
    "pillow>=11.0.0",
    "pymupdf>=1.26.0",
    "pypdf>=6.10.0",
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.33.0",
    "python-multipart>=0.0.9",
    "transformers>=4.55.0",
    "uvicorn>=0.32.0",
    "unsloth>=2026.4.8",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.25.0",
    "ipykernel>=7.2.0",
    "markitdown[pdf]>=0.1.5",
    "pymupdf4llm[layout,ocr]>=1.27.2.2",
    "pymongo>=4.17.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
